# ustr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_docs.sh  rebuild.sh  run_demos.sh  run_tests.sh  todo.md
.github/workflows/: ci.yml
cmake/: ustr-config.cmake.in
demos/: CMakeLists.txt  comprehensive_demo.cpp  enum_conversion_demo.cpp  ustr_demo.cpp
demos/multi_module/: CMakeLists.txt  build.sh  main.cpp
demos/multi_module/module1/: CMakeLists.txt  module1.cpp  module1.h
demos/multi_module/module2/: CMakeLists.txt  module2.cpp  module2.h
include/ustr/: ustr.h
include/utest/: utest.h
tests/: CMakeLists.txt  ustr_container_test.cpp  ustr_core_features_test.cpp  ustr_custom_classes_test.cpp  ustr_custom_specialization_test.cpp  ustr_enum_test.cpp  ustr_format_context_test.cpp  ustr_pair_test.cpp  ustr_quoted_str_test.cpp  ustr_scoped_formatter_test.cpp  ustr_test.cpp  ustr_tuple_test.cpp
